fix header margin on main page (shift right to line up with textbox)

--- a/scores/static/scores/style.css
+++ b/scores/static/scores/style.css
@@ -1,5 +1,5 @@
 
-header {
+body.grid-padding-x > header.header {
   background-color: #183059;
   max-height: 6rem;
   padding-left: 2rem;
